modified:   repocat/index.htm

--- a/repocat/index.htm
+++ b/repocat/index.htm
@@ -36,7 +36,7 @@
 <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">Introducing the Repository Catalog</h1>
-    <p>citySchema.org is a platform for sharing tools and templates for sharing a city-wide 3D model components among diverse tools including geographic information systems (GIS), 3d modeling programs and tools for archival access and preservation.  The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
+    <p>The citySchema Repository Catalog is a means of publishing a city model as a single package that includes all of the model components along with the catalog information, feature level metadata and finding aids in a single data-set that may be accessed with a variety of tools. 
     </p>
 
     <figure class="middle">
